# maldev

./: README.md  README.md.txt
c_cpp/DLLHijack/: DLLHijack.sln  DLLHijack.vcxproj  DLLHijack.vcxproj.filters  hijackMe.cpp
c_cpp/keylogger/: CMakeLists.txt  logkeys.cpp
c_cpp/process injection/process_hollowing/: hollow.cpp  hollow.h  main.cpp
c_cpp/process injection/shellcode_basic/: inject.cpp  process_inject.sln  process_inject.vcxproj
c_cpp/quick_docs/GetLastError/: customError.c  error.asm  headers.h  self-deletion.sln  self-deletion.vcxproj  self-deletion.vcxproj.filters
c_cpp/quick_docs/get_NT_func_SSN/: C  Get_SSN.c  header.h  main.cpp
c_cpp/quick_docs/win_api/: createProcess.c  createRemoteThreadEx.cpp  dll_example.cpp  messagebox.c  openProcess.c
c_cpp/ransomware/: CMakeLists.txt  main.cpp
c_cpp/self-deletion/: headers.h  self-deletion.sln  self-deletion.vcxproj  self-deletion.vcxproj.filters  self_delete.c
c_cpp/sys_calls/direct/: main.c  syscallD.asm
c_cpp/sys_calls/indirect/: main.c
c_cpp/trojan_exe/: main.c
python/keylogger/: keylogger.py
python/ransomware/: ransomware.py
rust/Code_Caving_Tool/: Cargo.toml
rust/Code_Caving_Tool/src/: main.rs
rust/Keylogger/: Cargo.toml
rust/Keylogger/src/: main.rs
rust/MessageBox/src/: main.rs
rust/Offensive_Rust/: rust_note.txt
rust/Offensive_Rust/MessageBox/: Cargo.toml
rust/Process Injection/ntapi_r/: Cargo.toml
rust/Process Injection/shellcode/: Cargo.toml
rust/Ransomware/ransomware_utils/: Cargo.toml
rust/Ransomware/ransomware_utils/src/: lib.rs
(+237 files in other folders)
